--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,6 @@
-
 services:
   - type: web
-    name: neuratek-calendar-api
+    name: neuratek-calendar
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
-    envVars:
-      - key: GOOGLE_APPLICATION_CREDENTIALS
-        value: service_account.json
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "uvicorn main:app --host 0.0.0.0 --port 10000"
