--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,11 @@
 services:
   - type: web
-    name: neuratek-calendar
+    name: neuratek-calendar-middleware
     env: python
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn main:app --host 0.0.0.0 --port 10000"
+    plan: free
+    buildCommand: pip install -r requirements.txt
+    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
+    envVars:
+      - key: GOOGLE_APPLICATION_CREDENTIALS
+        value: service_account.json
+    autoDeploy: true
